--- a/IA.ipynb
+++ b/IA.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -137,7 +137,13 @@
     "from sklearn import tree\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.naive_bayes import GaussianNB"
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "\n",
+    "#Necesario para graficar el arbol de decision\n",
+    "from sklearn.externals.six import StringIO  \n",
+    "from IPython.display import Image  \n",
+    "from sklearn.tree import export_graphviz\n",
+    "import pydotplus"
    ]
   },
   {
@@ -752,6 +758,20 @@
     "\n",
     "plt.title('Matriz de Confusión')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Graficamos el arbol de decision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
