--- a/IA.ipynb
+++ b/IA.ipynb
@@ -965,8 +965,7 @@
     "\n",
     "Este metodo no tiene parametros modificables dada la naturaleza de su estrategia para determinar si hay o no enfermedades en el grupo de datos de prueba.\n",
     "\n",
-    "Para las pruebas ejecutadas, el exito de las mismas, se encuentra alrededor del 80%, porcentaje cercano al relacionado con el entrenamiento, \n",
-    "\n",
+    "Para las pruebas ejecutadas, el exito de las mismas, se encuentra alrededor del 80%, porcentaje cercano al relacionado con el entrenamiento, lo que podria ser interpretado como una consistencia a lo largo del conjunto de datos en la muestra, siendo razonable su probabilidad de acierto dados los datos anteriores para determinar la presencia de enfermedades cardiovasculares.\n",
     "\n"
    ]
   },
