--- a/IA (copia).ipynb
+++ b/IA (copia).ipynb
@@ -448,7 +448,7 @@
     "\n",
     "## Variables numericas\n",
     "\n",
-    "Las variables numericas\n",
+    "Las variables numericas también se denominan variables cuantitativas, los datos numericos describen una caracteristica en terminos de un valor numerico.\n",
     "\n",
     "## Clasificando las variables\n",
     "\n",
@@ -460,7 +460,7 @@
     "- exang\n",
     "- slope\n",
     "- thal\n",
-    "<br>y los siguientes son de tipo numerico\n",
+    "<br>y las siguientes son de tipo numerico\n",
     "- age\n",
     "- trestbps\n",
     "- chol\n",
@@ -1256,7 +1256,8 @@
    "metadata": {},
    "source": [
     "## Interpretabilidad\n",
-    "\n"
+    "\n",
+    "En cuanto a la interpretabilidad de las estrategias para la predicción de la enfermedad con el conjunto de datos dado, podemos notar por un lado la cantidad de variables que se presentan con el árbol de decisión y más aún con las redes neuronales, donde las variaciones generan mejoras o desaciertos en los resultados deseados, siendo muy dificil la tarea de ajustar correctamente cada uno de estos dos modelos. Por otro lado, el modelo ingenuo de Bayes, donde no es necesaria la configuración del modelo, debido a que su estrategia funciona acorde al calculo de probabilidades de un evento, dada la ocurrencia de otros más, parece ir acorde al problema planteado, su interpretabilidad es muy natural y sus resultados son satisfactorios en comparación a los demás."
    ]
   },
   {
